Fixed: flex cross axis alignment

--- a/less/utilities/_flex.less
+++ b/less/utilities/_flex.less
@@ -24,8 +24,8 @@
   // Cross Axis Alignment
   &-xalign {
     &-center { align-items: center }
-    &-start { align-items: start }
-    &-end { align-items: end }
+    &-start { align-items: flex-start }
+    &-end { align-items: flex-end }
   }
 }
 
